# fastapi-router

./: .gitignore  README.md  pyproject.toml
fastapi_router/: __init__.py  main.py
